// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test custom description 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Custom Description
  </div>
  <div
    className="link"
  >
    <span
      className="text"
    >
      Go to all posts
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-arrow-right fa-w-14 icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Test custom error 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Custom Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  >
    <span
      className="text"
    >
      Go to all posts
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-arrow-right fa-w-14 icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Test custom link 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  >
    Custom Link
  </div>
</div>
`;

exports[`Test custom title 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Custom Title
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  >
    <span
      className="text"
    >
      Go to all posts
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-arrow-right fa-w-14 icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;

exports[`Test default 1`] = `
<div
  className="Pinpoint Error "
>
  <div
    className="logo"
  />
  <div
    className="error"
  >
    Error
  </div>
  <h1
    className="title"
  >
    Something Went Wrong
  </h1>
  <div
    className="description"
  >
    Sorry, an unexpected error occurred.
  </div>
  <div
    className="link"
  >
    <span
      className="text"
    >
      Go to all posts
    </span>
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-arrow-right fa-w-14 icon"
      data-icon="arrow-right"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M190.5 66.9l22.2-22.2c9.4-9.4 24.6-9.4 33.9 0L441 239c9.4 9.4 9.4 24.6 0 33.9L246.6 467.3c-9.4 9.4-24.6 9.4-33.9 0l-22.2-22.2c-9.5-9.5-9.3-25 .4-34.3L311.4 296H24c-13.3 0-24-10.7-24-24v-32c0-13.3 10.7-24 24-24h287.4L190.9 101.2c-9.8-9.3-10-24.8-.4-34.3z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </div>
</div>
`;
